--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,8 +1,14 @@
-<%- include("partials/header"); -%> 
+<%- include("partials/header"); -%>
 <h1>
     Home
 </h1>
-<p>
-    <%- homeContent %> 
-</p>
-<%- include("partials/footer"); -%> 
+<p><%- homeContent %></p>
+<% newPosts.forEach(function(post){ %>
+    <h1>
+        <%=post.title%>
+    </h1>
+    <p>
+        <%=post.body %>
+    </p>
+<% }) %>
+<%- include("partials/footer"); -%>
