--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,11 +4,12 @@
 </h1>
 <p><%- homeContent %></p>
 <% newPosts.forEach(function(post){ %>
-    <h1>
-        <%=post.title%>
-    </h1>
-    <p>
-        <%=post.body %>
-    </p>
+<h1>
+    <%=post.title.substring(0,100) %>
+</h1>
+<p>
+    <%=post.body.substring(0,100)+"..."%>
+    <a href="/posts/<%=post.title%>"> Read More</a>
+</p>
 <% }) %>
 <%- include("partials/footer"); -%>
